[tool.poetry]
name = "budgetdash"
version = "0.1.0"
description = ""
authors = ["Iyed Ghedamsi <iyed.ghdemsi@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.5"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
pymdown-extensions = "^6.2.1"
pygments = "^2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
